# stack-exchange-challenges

./: README.md
challenge19/: CHANGELOG.md  LICENSE  challenge19.cabal
challenge19/src/: Challenge19.hs
challenge19/test/: Main.hs
challenge20/: CHANGELOG.md  LICENSE  README.md  challenge20.cabal
challenge20/app/: Main.hs
challenge20/data/: challenge_20_s1.txt  challenge_20_s2.txt  challenge_20_s3.txt
